component random-planet was stylized and connected to server. created state for the component and added data to render

--- a/src/components/item-list/item-list.css
+++ b/src/components/item-list/item-list.css
@@ -1,6 +1,12 @@
+.list-group-item {
+    border: 1px solid transparent;
+}
 .item-list .list-group-item {
     cursor: pointer;
+    border-left: 4px solid transparent;
+    border-top-color: rgba(0,0,0,0.125);
+    border-bottom-color: rgba(0,0,0,0.125);
 }
 .item-list .list-group-item:hover {
-    background-color: #444;
+    border-left-color: #444;
 }
