--- a/src/components/random-planet/random-planet.css
+++ b/src/components/random-planet/random-planet.css
@@ -1,9 +1,20 @@
 .random-planet {
     display: flex;
+    align-items: center;
     padding: 1rem;
+    border-bottom: 1px solid #c1c1c1;
+    margin-bottom: 30px;
 }
 .random-planet .planet-image {
     width: 150px;
     height: 150px;
     border-radius: 10px;
+}
+.random-planet .planet-description .list-group-item {
+    padding-top: .50rem;
+    padding-bottom: .50rem;
+}
+.random-planet .planet-description,
+.random-planet .planet-description h4 {
+    margin-left: 10px;
 }
