--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,13 +1,21 @@
+* {
+    box-sizing: border-box;
+}
 .header {
-    margin-top: .5rem;
-    padding-left: 10px;
+    padding: 18px 12px;
+    align-items: center;
+    border-bottom: 1px solid #c1c1c1;
+}
+.header ul {
+    margin-left: 20px;
 }
 .header ul li {
     list-style: none;
     margin: 0;
     padding: .5rem 1rem;
-    border-radius: 3px;
+    cursor: pointer;
+    border-bottom: 4px solid transparent;
 }
 .header ul li:hover {
-    background-color: #444;
+    border-bottom-color: #444444;
 }
