All data transformation moved to swapi-services. Created Spinner component and added to random-planet

--- a/src/components/random-planet/random-planet.css
+++ b/src/components/random-planet/random-planet.css
@@ -13,6 +13,7 @@
 .random-planet .planet-description .list-group-item {
     padding-top: .50rem;
     padding-bottom: .50rem;
+    border-top: 1px solid #c1c1c1;
 }
 .random-planet .planet-description,
 .random-planet .planet-description h4 {
